tests/samples/negative/generics/generic_prototype_unsupported.ax
module generic_prototype_unsupported;

fn id<T>(value: T) -> T;

fn main() -> i32 {
    return 0;
}
